--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-3 align-self-center">
+                    <button type="button" class="btn btn-primary bg-warning text-dark"  ><a href="#Reservation" width="41">Reserve Table</button></a>
                 </div>
             </div>
         </div>
@@ -72,8 +75,13 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
+                <div class="media">
+                    <div class="media-body">
+                <h2 class="mt-0 mb-1">Weekend Grand Buffet <span class="badge badge-danger"> NEW </span></h2>
                 <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                    </div>
+                    <img class="d-flex ml-3 img-thumbnail align-self-center" src="img/buffet.png" alt="alberto">
+                </div>
             </div>
         </div>
 
@@ -94,6 +102,61 @@
             </div>
         </div>
     </div>
+    <div class="row justify-content-center" id="Reservation" >
+        <div class="col-12 col-sm-5">
+        <div class="card" >
+            <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+            <div class="card-body">
+                <div class="col-12 col-md-10">
+                    <form>
+                        <div class="form-group row">
+                            <label for="guests" class="col-md-4 col-form-label">Number of Guests</label>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="guests1" value="guest1">
+                                <label class="form-check-label" for="guests1">1</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="guests2" value="guest2">
+                                <label class="form-check-label" for="guests2">2</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="guests3" value="guest3">
+                                <label class="form-check-label" for="guests3">3</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="guests4" value="guest4">
+                                <label class="form-check-label" for="guests4">4</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="guests5" value="guest5">
+                                <label class="form-check-label" for="guests5">5</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="guests6" value="guest6">
+                                <label class="form-check-label" for="guests6">6</label>
+                              </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="date-time" class="col-12 col-md-3 col-form-label">Date and Time</label>
+                            <div class="col-9 col-md-5">
+                                <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                            </div>
+                            <div class="col-9 col-md-4">
+                                <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-12 offset-md-5 col-md-7">
+                                <button type="submit" class="btn btn-primary">Reserve</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="col-12">&nbsp;</div>
+    </div>
+</div>
 
     <footer class="footer">
         <div class="container">
