--- a/index.html
+++ b/index.html
@@ -75,6 +75,82 @@
         </div>
     </div>
 
+    <div id="Reservation" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content" >
+                <div class="modal-header" >
+                    <h4 class="modal-title">Reservation Table </h4>
+                
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <label for="guests" class="col-md-3 col-form-label">Number of Guests <span>&nbsp;</span>
+                            </label>
+                            <div class="col-12 col-md-5">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="guests1" value="guest1">
+                                <label class="form-check-label" for="guests1">1</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="guests2" value="guest2">
+                                <label class="form-check-label" for="guests2">2</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="guests3" value="guest3">
+                                <label class="form-check-label" for="guests3">3</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="guests4" value="guest4">
+                                <label class="form-check-label" for="guests4">4</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="guests5" value="guest5">
+                                <label class="form-check-label" for="guests5">5</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="guests6" value="guest6">
+                                <label class="form-check-label" for="guests6">6</label>
+                              </div>
+                        </div>
+                    </div>
+                        <div class="form-group row">
+                        <label for="section" class="col-md-3 col-form-label">Section
+                        </label>
+                        <div class="col-9 col-md-4">
+                        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <label class="btn btn-success active">
+                              <input type="radio" name="options" id="option1" autocomplete="off" checked> Non-Smoking
+                            </label>
+                            <label class="btn btn-danger">
+                              <input type="radio" name="options" id="option2" autocomplete="off"> Smoking
+                            </label>
+                          </div>
+                          </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="date-time" class="col-md-3 col-form-label"> Date and Time</label>
+                            <div class="col-9 col-md-4">
+                                <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                            </div>
+                            <div class="col-9 col-md-4">
+                                <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-12 offset-md-3 col-md-7">
+                                <button type="submit" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary" >Reserve</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <header class = "jumbotron">
         <div class="container">
@@ -87,7 +163,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a role="button" class="btn btn-block nav-link bg-warning text-dark" data-toggle="tooltip" data-html="true" title="Or call us at <br><strong>+91 9738086304</strong>" data-placement="bottom" href="#Reservation">Reserve Table</a>
+                    <a role="button" class="btn btn-block nav-link bg-warning text-dark" data-toggle="modal" data-target="#Reservation" >Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -202,10 +278,11 @@
         <div class="card" >
             <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
             <div class="card-body">
-                <div class="col-12 col-md-10">
+                <div class="col-10 col-md-10">
                     <form>
                         <div class="form-group row">
                             <label for="guests" class="col-md-4 col-form-label">Number of Guests</label>
+                            <div class="col-12 col-md-4">
                             <div class="form-check form-check-inline">
                                 <input class="form-check-input" type="radio" name="inlineRadioOptions" id="guests1" value="guest1">
                                 <label class="form-check-label" for="guests1">1</label>
@@ -231,8 +308,9 @@
                                 <label class="form-check-label" for="guests6">6</label>
                               </div>
                         </div>
+                    </div>
                         <div class="form-group row">
-                            <label for="date-time" class="col-12 col-md-3 col-form-label">Date and Time</label>
+                            <label for="date-time" class="col-11 col-md-3 col-form-label">Date and Time</label>
                             <div class="col-9 col-md-5">
                                 <input type="text" class="form-control" id="date" name="date" placeholder="Date">
                             </div>
@@ -299,11 +377,7 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
-<script>
-    $(document).ready(function(){
-        $('[data-toggle="tooltip"]').tooltip();
-    })
-</script>
+
 
 </body>
 
