--- a/index.html
+++ b/index.html
@@ -216,6 +216,14 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carousel-pause">
+                            <span class="fa fa-pause"></span>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carousel-play">
+                            <span class="fa fa-play"></span>
+                        </button>
+                    </div>
                 </div>
 
             </div>
@@ -281,8 +289,8 @@
                 <div class="col-10 col-md-10">
                     <form>
                         <div class="form-group row">
-                            <label for="guests" class="col-md-4 col-form-label">Number of Guests</label>
-                            <div class="col-12 col-md-4">
+                            <label for="guests" class="col-md-3 col-form-label">Number of Guests</label>
+                            <div class="col-12 col-md-9">
                             <div class="form-check form-check-inline">
                                 <input class="form-check-input" type="radio" name="inlineRadioOptions" id="guests1" value="guest1">
                                 <label class="form-check-label" for="guests1">1</label>
@@ -377,7 +385,17 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
-
+    <script>
+        $(document).ready(function(){
+            $("#mycarousel").carousel( { interval: 2000 } );
+            $("#carousel-pause").click(function(){
+                $("#mycarousel").carousel('pause');
+            });
+            $("#carousel-play").click(function(){
+                $("#mycarousel").carousel('cycle');
+            });
+        });
+    </script>
 
 </body>
 
